Closed Bug 1781177 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::detail::InvalidArrayIndex_CRASH | gfxShapedText::DetailedGlyphStore::Get]

Categories

(Core :: Graphics: Text, defect)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- wontfix
firefox103 --- wontfix
firefox104 --- wontfix
firefox105 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/629f67c9-f9bc-4702-bd67-e18190220723

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libmozglue.so mozilla::detail::InvalidArrayIndex_CRASH mfbt/Assertions.cpp:50
1 libxul.so gfxShapedText::DetailedGlyphStore::Get gfx/thebes/gfxFont.h:1162
2 libxul.so gfxTextRun::CopyGlyphDataFrom gfx/thebes/gfxTextRun.cpp:1485
3 libxul.so bool gfxFont::SplitAndInitTextRun<char16_t> gfx/thebes/gfxFont.cpp:3381
4 libxul.so void gfxFontGroup::InitScriptRun<char16_t> gfx/thebes/gfxTextRun.cpp:2741
5 libxul.so gfxFontGroup::MakeTextRun gfx/thebes/gfxTextRun.cpp:2524
6 libxul.so mozilla::dom::CanvasBidiProcessor::SetText dom/canvas/CanvasRenderingContext2D.cpp:3883
7 libxul.so nsBidiPresUtils::ProcessText layout/base/nsBidiPresUtils.cpp:2234
8 libxul.so mozilla::dom::CanvasRenderingContext2D::DrawOrMeasureText dom/canvas/CanvasRenderingContext2D.cpp:4253
9 libxul.so mozilla::dom::OffscreenCanvasRenderingContext2D_Binding::fillText dom/bindings/OffscreenCanvasRenderingContext2DBinding.cpp:3902
Flags: needinfo?(jfkthame)

This crash report seems to be on a worker, not sure if it is related to OffscreenCanvas, or it just happened to occur on a DOM worker thread.

Assignee: nobody → aosmond
Flags: needinfo?(jfkthame)
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5c3218d57119
Refactor gfxFont::GetShapedWord to use lambdas. r=jfkthame
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
Crash Signature: [@ mozilla::detail::InvalidArrayIndex_CRASH | gfxShapedText::DetailedGlyphStore::Get] → [@ mozilla::detail::InvalidArrayIndex_CRASH | gfxShapedText::DetailedGlyphStore::Get] [@ gfxShapedText::DetailedGlyphStore::Get ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: