Bug 1781177 - Refactor gfxFont::GetShapedWord to use lambdas. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D153634