gfx/thebes/gfxFont.h
@@ -9,6 +9,7 @@
 
 #include <new>
 #include <utility>
+#include <functional>
 #include "PLDHashTable.h"
 #include "ThebesRLBoxTypes.h"
 #include "gfxFontVariations.h"
@@ -1803,16 +1804,12 @@ class gfxFont {
                            nsAtom* aLanguage,
                            mozilla::gfx::ShapedTextFlags aOrientation);
 
-  // Get a ShapedWord representing the given text (either 8- or 16-bit)
-  // for use in setting up a gfxTextRun.
-  template <typename T>
-  gfxShapedWord* GetShapedWord(DrawTarget* aDrawTarget, const T* aText,
-                               uint32_t aLength, uint32_t aHash,
-                               Script aRunScript, nsAtom* aLanguage,
-                               bool aVertical, int32_t aAppUnitsPerDevUnit,
-                               mozilla::gfx::ShapedTextFlags aFlags,
-                               RoundingFlags aRounding,
-                               gfxTextPerfMetrics* aTextPerf);
+  // Get a ShapedWord representing a single space for use in setting up a
+  // gfxTextRun.
+  bool ProcessSingleSpaceShapedWord(
+      DrawTarget* aDrawTarget, bool aVertical, int32_t aAppUnitsPerDevUnit,
+      mozilla::gfx::ShapedTextFlags aFlags, RoundingFlags aRounding,
+      const std::function<void(gfxShapedWord*)>& aCallback);
 
   // Called by the gfxFontCache timer to increment the age of all the words,
   // so that they'll expire after a sufficient period of non-use.
@@ -2048,6 +2045,17 @@ class gfxFont {
                                      gfxTextRun* aTextRun);
 
   void CheckForFeaturesInvolvingSpace() const;
+
+  // Get a ShapedWord representing the given text (either 8- or 16-bit)
+  // for use in setting up a gfxTextRun.
+  template <typename T, typename Func>
+  bool ProcessShapedWordInternal(DrawTarget* aDrawTarget, const T* aText,
+                                 uint32_t aLength, uint32_t aHash,
+                                 Script aRunScript, nsAtom* aLanguage,
+                                 bool aVertical, int32_t aAppUnitsPerDevUnit,
+                                 mozilla::gfx::ShapedTextFlags aFlags,
+                                 RoundingFlags aRounding,
+                                 gfxTextPerfMetrics* aTextPerf, Func aCallback);
 
   // whether a given feature is included in feature settings from both the
   // font and the style. aFeatureOn set if resolved feature value is non-zero
